--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,8 @@ footer p {
 .inner-body {
   background-image:url('../img/header-bg.png');
   background-repeat: no-repeat;
+  width: 100%;
+  height: 400px;
 }
 
 .body-text.inner-page a, .body-text.inner-page h3 {
